Fixed sidebar scrolling on overflow and added explanation to model outputs for machine scheduling

--- a/app/static/css/jpilkington-stylev2.css
+++ b/app/static/css/jpilkington-stylev2.css
@@ -87,6 +87,7 @@ a:focus {
     top: 0;
     left: 0;
     height: 100vh;
+    overflow-y: auto;
     z-index: 999;
     background: var(--color_1);
     color: #fff;
